change JournalAccumulator so that it can handle a reduced range of account levels